--- a/MainFrm.resx
+++ b/MainFrm.resx
@@ -127,6 +127,79 @@
   <data name="itemFile.Text" xml:space="preserve">
     <value>文件(&amp;F)</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="itemCopy.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
+    <value>Ctrl+C</value>
+  </data>
+  <data name="itemCopy.Size" type="System.Drawing.Size, System.Drawing">
+    <value>270, 34</value>
+  </data>
+  <data name="itemCopy.Text" xml:space="preserve">
+    <value>复制(&amp;C)</value>
+  </data>
+  <data name="itemCut.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
+    <value>Ctrl+X</value>
+  </data>
+  <data name="itemCut.Size" type="System.Drawing.Size, System.Drawing">
+    <value>270, 34</value>
+  </data>
+  <data name="itemCut.Text" xml:space="preserve">
+    <value>剪切(&amp;U)</value>
+  </data>
+  <data name="itemSeperator2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>267, 6</value>
+  </data>
+  <data name="itemPaste.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
+    <value>Ctrl+V</value>
+  </data>
+  <data name="itemPaste.Size" type="System.Drawing.Size, System.Drawing">
+    <value>270, 34</value>
+  </data>
+  <data name="itemPaste.Text" xml:space="preserve">
+    <value>粘贴(P)</value>
+  </data>
+  <data name="itemUndo.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
+    <value>Ctrl+Z</value>
+  </data>
+  <data name="itemUndo.Size" type="System.Drawing.Size, System.Drawing">
+    <value>270, 34</value>
+  </data>
+  <data name="itemUndo.Text" xml:space="preserve">
+    <value>撤销(&amp;N)</value>
+  </data>
+  <data name="itemRedo.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
+    <value>Ctrl+Y</value>
+  </data>
+  <data name="itemRedo.Size" type="System.Drawing.Size, System.Drawing">
+    <value>270, 34</value>
+  </data>
+  <data name="itemRedo.Text" xml:space="preserve">
+    <value>重做(&amp;R)</value>
+  </data>
+  <data name="itemSelectAll.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
+    <value>Ctrl+A</value>
+  </data>
+  <data name="itemSelectAll.Size" type="System.Drawing.Size, System.Drawing">
+    <value>270, 34</value>
+  </data>
+  <data name="itemSelectAll.Text" xml:space="preserve">
+    <value>全选(&amp;A)</value>
+  </data>
+  <data name="toolStripMenuItem3.Size" type="System.Drawing.Size, System.Drawing">
+    <value>267, 6</value>
+  </data>
+  <data name="toolInsert.Size" type="System.Drawing.Size, System.Drawing">
+    <value>270, 34</value>
+  </data>
+  <data name="toolInsert.Text" xml:space="preserve">
+    <value>插入(&amp;I)</value>
+  </data>
+  <data name="itemSearch.Size" type="System.Drawing.Size, System.Drawing">
+    <value>270, 34</value>
+  </data>
+  <data name="itemSearch.Text" xml:space="preserve">
+    <value>在 Web 中搜索...</value>
+  </data>
   <data name="itemEdit.Size" type="System.Drawing.Size, System.Drawing">
     <value>84, 28</value>
   </data>
@@ -161,7 +234,7 @@
     <value>0, 0</value>
   </data>
   <data name="menuStrip1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1461, 36</value>
+    <value>1461, 32</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="menuStrip1.TabIndex" type="System.Int32, mscorlib">
@@ -182,7 +255,6 @@
   <data name="&gt;&gt;menuStrip1.ZOrder" xml:space="preserve">
     <value>3</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="itemNew.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
     <value>Ctrl+N</value>
   </data>
@@ -255,72 +327,6 @@
   <data name="itemQuit.Text" xml:space="preserve">
     <value>退出(&amp;Q)</value>
   </data>
-  <data name="itemCopy.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
-    <value>Ctrl+C</value>
-  </data>
-  <data name="itemCopy.Size" type="System.Drawing.Size, System.Drawing">
-    <value>243, 34</value>
-  </data>
-  <data name="itemCopy.Text" xml:space="preserve">
-    <value>复制(&amp;C)</value>
-  </data>
-  <data name="itemCut.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
-    <value>Ctrl+X</value>
-  </data>
-  <data name="itemCut.Size" type="System.Drawing.Size, System.Drawing">
-    <value>243, 34</value>
-  </data>
-  <data name="itemCut.Text" xml:space="preserve">
-    <value>剪切(&amp;U)</value>
-  </data>
-  <data name="itemSeperator2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>240, 6</value>
-  </data>
-  <data name="itemPaste.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
-    <value>Ctrl+V</value>
-  </data>
-  <data name="itemPaste.Size" type="System.Drawing.Size, System.Drawing">
-    <value>243, 34</value>
-  </data>
-  <data name="itemPaste.Text" xml:space="preserve">
-    <value>粘贴(P)</value>
-  </data>
-  <data name="itemUndo.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
-    <value>Ctrl+Z</value>
-  </data>
-  <data name="itemUndo.Size" type="System.Drawing.Size, System.Drawing">
-    <value>243, 34</value>
-  </data>
-  <data name="itemUndo.Text" xml:space="preserve">
-    <value>撤销(&amp;N)</value>
-  </data>
-  <data name="itemRedo.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
-    <value>Ctrl+Y</value>
-  </data>
-  <data name="itemRedo.Size" type="System.Drawing.Size, System.Drawing">
-    <value>243, 34</value>
-  </data>
-  <data name="itemRedo.Text" xml:space="preserve">
-    <value>重做(&amp;R)</value>
-  </data>
-  <data name="itemSelectAll.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
-    <value>Ctrl+A</value>
-  </data>
-  <data name="itemSelectAll.Size" type="System.Drawing.Size, System.Drawing">
-    <value>243, 34</value>
-  </data>
-  <data name="itemSelectAll.Text" xml:space="preserve">
-    <value>全选(&amp;A)</value>
-  </data>
-  <data name="toolStripMenuItem3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>240, 6</value>
-  </data>
-  <data name="toolInsert.Size" type="System.Drawing.Size, System.Drawing">
-    <value>243, 34</value>
-  </data>
-  <data name="toolInsert.Text" xml:space="preserve">
-    <value>插入(&amp;I)</value>
-  </data>
   <data name="itemDateTime.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
     <value>F5</value>
   </data>
@@ -335,12 +341,6 @@
   </data>
   <data name="itemInsertLicense.Text" xml:space="preserve">
     <value>插入许可证...</value>
-  </data>
-  <data name="itemSearchWithBing.Size" type="System.Drawing.Size, System.Drawing">
-    <value>243, 34</value>
-  </data>
-  <data name="itemSearchWithBing.Text" xml:space="preserve">
-    <value>使用 Bing 搜索...</value>
   </data>
   <data name="itemSettings.Size" type="System.Drawing.Size, System.Drawing">
     <value>270, 34</value>
@@ -411,23 +411,32 @@
   <data name="itemMeetFile.Text" xml:space="preserve">
     <value>MeetFile</value>
   </data>
+  <data name="toolStripMenuItem5.Size" type="System.Drawing.Size, System.Drawing">
+    <value>267, 6</value>
+  </data>
+  <data name="itemAutoScroll.Size" type="System.Drawing.Size, System.Drawing">
+    <value>270, 34</value>
+  </data>
+  <data name="itemAutoScroll.Text" xml:space="preserve">
+    <value>自动换行(&amp;A)</value>
+  </data>
   <data name="itemAbout.Size" type="System.Drawing.Size, System.Drawing">
-    <value>194, 34</value>
+    <value>270, 34</value>
   </data>
   <data name="itemAbout.Text" xml:space="preserve">
     <value>关于(&amp;A)</value>
   </data>
   <data name="toolStripMenuItem2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>191, 6</value>
+    <value>267, 6</value>
   </data>
   <data name="itemIssues.Size" type="System.Drawing.Size, System.Drawing">
-    <value>194, 34</value>
+    <value>270, 34</value>
   </data>
   <data name="itemIssues.Text" xml:space="preserve">
     <value>Issues...</value>
   </data>
   <data name="itemSysInfo.Size" type="System.Drawing.Size, System.Drawing">
-    <value>194, 34</value>
+    <value>270, 34</value>
   </data>
   <data name="itemSysInfo.Text" xml:space="preserve">
     <value>系统信息...</value>
@@ -477,6 +486,33 @@
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>258, 17</value>
   </metadata>
+  <data name="toolStrip1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 32</value>
+  </data>
+  <data name="toolStrip1.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>0, 0, 3, 0</value>
+  </data>
+  <data name="toolStrip1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>1461, 33</value>
+  </data>
+  <data name="toolStrip1.TabIndex" type="System.Int32, mscorlib">
+    <value>5</value>
+  </data>
+  <data name="toolStrip1.Text" xml:space="preserve">
+    <value>toolStrip1</value>
+  </data>
+  <data name="&gt;&gt;toolStrip1.Name" xml:space="preserve">
+    <value>toolStrip1</value>
+  </data>
+  <data name="&gt;&gt;toolStrip1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;toolStrip1.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;toolStrip1.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
   <data name="strpbtnNew.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -554,33 +590,6 @@
   <data name="toolCompile.Text" xml:space="preserve">
     <value>编译</value>
   </data>
-  <data name="toolStrip1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 36</value>
-  </data>
-  <data name="toolStrip1.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>0, 0, 3, 0</value>
-  </data>
-  <data name="toolStrip1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1461, 38</value>
-  </data>
-  <data name="toolStrip1.TabIndex" type="System.Int32, mscorlib">
-    <value>5</value>
-  </data>
-  <data name="toolStrip1.Text" xml:space="preserve">
-    <value>toolStrip1</value>
-  </data>
-  <data name="&gt;&gt;toolStrip1.Name" xml:space="preserve">
-    <value>toolStrip1</value>
-  </data>
-  <data name="&gt;&gt;toolStrip1.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;toolStrip1.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;toolStrip1.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
   <data name="elementHost1.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Fill</value>
   </data>
@@ -588,13 +597,13 @@
     <value>Consolas, 9pt</value>
   </data>
   <data name="elementHost1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 74</value>
+    <value>0, 65</value>
   </data>
   <data name="elementHost1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 4, 4, 4</value>
   </data>
   <data name="elementHost1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1461, 685</value>
+    <value>1461, 694</value>
   </data>
   <data name="elementHost1.TabIndex" type="System.Int32, mscorlib">
     <value>6</value>
@@ -610,15 +619,6 @@
   </data>
   <data name="&gt;&gt;elementHost1.ZOrder" xml:space="preserve">
     <value>0</value>
-  </data>
-  <data name="toolStripMenuItem5.Size" type="System.Drawing.Size, System.Drawing">
-    <value>267, 6</value>
-  </data>
-  <data name="itemAutoScroll.Size" type="System.Drawing.Size, System.Drawing">
-    <value>270, 34</value>
-  </data>
-  <data name="itemAutoScroll.Text" xml:space="preserve">
-    <value>自动换行(&amp;A)</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -776,10 +776,10 @@
   <data name="&gt;&gt;itemInsertLicense.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;itemSearchWithBing.Name" xml:space="preserve">
-    <value>itemSearchWithBing</value>
+  <data name="&gt;&gt;itemSearch.Name" xml:space="preserve">
+    <value>itemSearch</value>
   </data>
-  <data name="&gt;&gt;itemSearchWithBing.Type" xml:space="preserve">
+  <data name="&gt;&gt;itemSearch.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;itemTools.Name" xml:space="preserve">
@@ -872,6 +872,18 @@
   <data name="&gt;&gt;itemMeetFile.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="&gt;&gt;toolStripMenuItem5.Name" xml:space="preserve">
+    <value>toolStripMenuItem5</value>
+  </data>
+  <data name="&gt;&gt;toolStripMenuItem5.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripSeparator, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;itemAutoScroll.Name" xml:space="preserve">
+    <value>itemAutoScroll</value>
+  </data>
+  <data name="&gt;&gt;itemAutoScroll.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="&gt;&gt;itemHelp.Name" xml:space="preserve">
     <value>itemHelp</value>
   </data>
@@ -943,18 +955,6 @@
   </data>
   <data name="&gt;&gt;toolCompile.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripButton, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;toolStripMenuItem5.Name" xml:space="preserve">
-    <value>toolStripMenuItem5</value>
-  </data>
-  <data name="&gt;&gt;toolStripMenuItem5.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripSeparator, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;itemAutoScroll.Name" xml:space="preserve">
-    <value>itemAutoScroll</value>
-  </data>
-  <data name="&gt;&gt;itemAutoScroll.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>MainFrm</value>
