--- a/src/RCSE-Reloaded/ErrorForm.resx
+++ b/src/RCSE-Reloaded/ErrorForm.resx
@@ -125,7 +125,7 @@
     <value>5</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="buttonOK.Location" type="System.Drawing.Point, System.Drawing">
+  <data name="buttonOk.Location" type="System.Drawing.Point, System.Drawing">
     <value>435, 262</value>
   </data>
   <data name="&gt;&gt;buttonGithub.ZOrder" xml:space="preserve">
@@ -161,7 +161,7 @@
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
     <value>10, 9</value>
   </data>
-  <data name="buttonOK.TabIndex" type="System.Int32, mscorlib">
+  <data name="buttonOk.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
   </data>
   <data name="&gt;&gt;textErrorDescription.ZOrder" xml:space="preserve">
@@ -173,7 +173,7 @@
   <data name="&gt;&gt;label1.ZOrder" xml:space="preserve">
     <value>4</value>
   </data>
-  <data name="&gt;&gt;buttonOK.Type" xml:space="preserve">
+  <data name="&gt;&gt;buttonOk.Type" xml:space="preserve">
     <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;buttonGithub.Type" xml:space="preserve">
@@ -206,13 +206,13 @@
   <data name="label1.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
-  <data name="buttonOK.Text" xml:space="preserve">
+  <data name="buttonOk.Text" xml:space="preserve">
     <value>确定</value>
   </data>
   <data name="textErrorDescription.Size" type="System.Drawing.Size, System.Drawing">
     <value>549, 220</value>
   </data>
-  <data name="&gt;&gt;buttonOK.ZOrder" xml:space="preserve">
+  <data name="&gt;&gt;buttonOk.ZOrder" xml:space="preserve">
     <value>2</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
@@ -221,10 +221,10 @@
   <data name="textErrorDescription.Multiline" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
-  <data name="&gt;&gt;buttonOK.Name" xml:space="preserve">
-    <value>buttonOK</value>
+  <data name="&gt;&gt;buttonOk.Name" xml:space="preserve">
+    <value>buttonOk</value>
   </data>
-  <data name="&gt;&gt;buttonOK.Parent" xml:space="preserve">
+  <data name="&gt;&gt;buttonOk.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
   <data name="buttonSave.Text" xml:space="preserve">
@@ -309,7 +309,7 @@
   <data name="&gt;&gt;buttonGithub.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="buttonOK.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="buttonOk.Size" type="System.Drawing.Size, System.Drawing">
     <value>128, 37</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
