--- a/src/RCSE-Reloaded/LocalizedRes/MessageBoxes.resx
+++ b/src/RCSE-Reloaded/LocalizedRes/MessageBoxes.resx
@@ -176,4 +176,10 @@
   <data name="TitleWarning" xml:space="preserve">
     <value>警告</value>
   </data>
+  <data name="ErrorReadConsoleFile" xml:space="preserve">
+	  <value>无法从命令行解析文件。文件未找到。</value>
+  </data>
+  <data name="ErrorReadConsoleFileTitle" xml:space="preserve">
+	  <value>控制台错误</value>
+  </data>
 </root>
